kubernetes/apps/development/temporal/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: temporal
spec:
  hostnames:
    - "temporal.${LIMITED_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - name: temporal-web
          port: 8080
